save text media to file + edit media caption ok

--- a/indexGoogle.htm
+++ b/indexGoogle.htm
@@ -5,6 +5,7 @@
     </script>
   </head>
   <body>
+  <div ><object id="htmlContent" type="text/html" data="test.html" ></object></div>
   <img src="https://drive.google.com/uc?export=download&id=0B7NUMLjg3OVXTGp1LXhNNUNJbWM"/>
     <div id="authorize-div" style="display: none">
       <span>Authorize access to Drive API</span>
